Fix overlapping sections issue

--- a/includes/sass/_menu-section.scss
+++ b/includes/sass/_menu-section.scss
@@ -106,9 +106,9 @@ section {
 	padding: 0 var(--space-side-padding);
 	padding-left: max(var(--space-side-padding), #{var.$iX-left});
 	padding-right: max(var(--space-side-padding), #{var.$iX-right});
-	pointer-events: none;
 	&.navigate_with_mobile_menu {
 		display: none;
+		pointer-events: none;
 		padding-top: calc(var(--nav-height) + var(--space-side-padding));
 		padding-top: calc(var(--nav-height) + var(--space-side-padding) + #{var.$iX-top});
 		margin-top: calc(-1 * #{var.$iX-top});
@@ -120,6 +120,7 @@ section {
 		}
 	}
 }
+section h2,
 .section_group {
 	pointer-events: all;
 }
