--- a/includes/sass/_variables.scss
+++ b/includes/sass/_variables.scss
@@ -41,7 +41,7 @@ $break-xxl: 1400px;
 	--link-color: #106dc6;
 	--link-hover-color: #23527c;
 
-	--element-hover-color: rgba(0, 0, 0, 0.1);
+	--element-hover-color: rgba(0, 0, 0, 0.05);
 	--element-active-color: rgba(13, 135, 202, 0.1);
 	--element-corner-radius: 8px;
 	--element-padding: 8px;
