--- a/public_html/styles/billofrickies.css
+++ b/public_html/styles/billofrickies.css
@@ -16,7 +16,7 @@
   --text-secondary-color: #5e6d7a;
   --link-color: #106dc6;
   --link-hover-color: #23527c;
-  --element-hover-color: rgba(0, 0, 0, 0.1);
+  --element-hover-color: rgba(0, 0, 0, 0.05);
   --element-active-color: rgba(13, 135, 202, 0.1);
   --element-corner-radius: 8px;
   --element-padding: 8px;
